--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.3",
+    "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.2.41"
   },
   "repository": {
-	"type": "git",
-	"url": "git+https://github.com/tayanaris/exchange_market.git"
+    "type": "git",
+    "url": "git+https://github.com/tayanaris/exchange_market.git"
   },
   "bugs": {
     "url": "https://github.com/tayanaris/exchange_market/issues"
